added fave list button & fave property

--- a/details.html
+++ b/details.html
@@ -43,6 +43,7 @@
 
   <div id="button-container">
     <section id="store-button">
+      <button type="button" onclick="">Favorites List</button>
       <button type="button" onclick="pastHistory();">Show Past History</button>
       <button type="button" onclick="clearFunction();">Delete Past History</button>
     </section>
