favesList appending content to the screen

--- a/details.html
+++ b/details.html
@@ -42,7 +42,9 @@
     </section>
   </div>
 
-  <script src="./js/app.js"></script>
+  <!-- Skyler -->
+  <!-- <script src="./js/app.js"></script> -->
+  <!-- END Skyler -->
   <script src="details.js"></script>
 
 </body>
