fixed list alignment issue on index.html and details.html

--- a/details.html
+++ b/details.html
@@ -41,7 +41,9 @@
       <button type="button" onclick="clearFunction();">Delete Past History</button>
     </section>
   </div>
-
+  <aside id="restaurant-list">
+    <div id="info-list"></div>
+  </aside>
   <!-- Skyler -->
   <!-- <script src="./js/app.js"></script> -->
   <!-- END Skyler -->
