--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   <div id="distance"></div>
   <section id="user-form-container" class="tab-content" style="display: block;"></section>
   <div class="form-group" id="restaurant-code">
+  <aside id="restaurant-list">
+    <div id="info-list"></div>
+  </aside>
   <!-- Load the API from the specified URL
   * The async attribute allows the browser to render the page while the API loads
   * The key parameter will contain your own API key 
