cleaned comments and console logs, rewrote readme

--- a/details.html
+++ b/details.html
@@ -29,25 +29,23 @@
     </nav>
 
     <img id="headerPhoto" src="IMG/footerPhoto1.png" alt="code fellows logo">
-  </header>
+    </header>
     
-  <h1 id ="detailsH1"><b>Codability:</b> letting you know if the restaurant has Wi-Fi, what their prices are like, and the distance from Code Fellows.</h1>
-  <aside id="details-aside"></aside>
+    <h1 id ="detailsH1"><b>Codability:</b> letting you know if the restaurant has Wi-Fi, what their prices are like, and the distance from Code Fellows.</h1>
+    <aside id="details-aside"></aside>
 
-  <div id="button-container">
-    <section id="store-button">
-      <button type="button" onclick="listFavorites();">Favorites List</button>
-      <button type="button" onclick="pastHistory();">Show Past History</button>
-      <button type="button" onclick="clearFunction();">Delete Past History</button>
-    </section>
-  </div>
-  <aside id="restaurant-list">
-    <div id="info-list"></div>
-  </aside>
-  <!-- Skyler -->
-  <!-- <script src="./js/app.js"></script> -->
-  <!-- END Skyler -->
-  <script src="details.js"></script>
+    <div id="button-container">
+      <section id="store-button">
+        <button type="button" onclick="listFavorites();">Favorites List</button>
+        <button type="button" onclick="pastHistory();">Show Past History</button>
+        <button type="button" onclick="clearFunction();">Delete Past History</button>
+      </section>
+    </div>
+    <aside id="restaurant-list">
+      <div id="info-list"></div>
+    </aside>
+    
+    <script src="js/details.js"></script>
 
-</body>
+  </body>
 </html>
