--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0kHBkO9Rmi0fOKp4q5GlLZK6IgpX46z8&libraries=places&callback=initMap"></script> 
   <script src="js/app.js"></script>
   <script src="js/rendermap.js"></script>
-  <script src="details.js"></script>
+  <script src="js/details.js"></script>
 </body> 
 </html>
